# Linux_PAM

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  grpc_common.cmake  pam.proto
assets/: pam_control.sql
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  DBHandler.cpp  DBHandler.h  GrpcMethods.cpp  GrpcMethods.h  ServerImpl.cpp  ServerImpl.h  main.cpp
